@@ -1,5 +1,6 @@
 meecast (0.5.3) unstable; urgency=low
 
+  * Fixed problem with Current weather for weather.com
   * Updated Germany translation
 
  -- Vlad Vasiliev <vlad@gas.by>  Sat, 3 Mar 2011 12:42:23 +0200
